# compare-files-logically

./: README.md  mypy.ini  pyproject.toml  setup.py
compare_files_logically/: __init__.py  compare.py
tests/: __init__.py  generate_test_data.py  test_compare.py
tests/data/: file1.csv  file1.parquet  file3.csv  file3.parquet  file4.csv  file4.parquet
